[package]
name = "evo-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Evolutionary computation in Rust — genetic algorithms, differential evolution, NSGA-II multi-objective, genetic programming"
repository = "https://github.com/SuperInstance/evo-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1"

[dev-dependencies]
